--- a/semanas/Semana 2.html
+++ b/semanas/Semana 2.html
@@ -16,49 +16,84 @@
   <!-- ENCABEZADO -->
   <header class="bg-gradient-to-r from-blue-800 to-black text-white py-10 shadow-md">
     <div class="container mx-auto px-6 text-center">
-      <h1 class="text-4xl md:text-5xl font-bold drop-shadow-lg">Desarrollo de Aplicaciones</h1>
-      <p class="mt-2 text-blue-100">Curso - Portafolio de trabajos</p>
+      <h1 class="text-4xl md:text-5xl font-bold drop-shadow-lg">Semana 2 - Trabajos</h1>
+      <p class="mt-2 text-blue-100">Andres Melvin Lazaro Estrada</p>
     </div>
   </header>
 
-  <!-- CONTENIDO -->
-  <main class="container mx-auto px-6 py-10">
-    <!-- Título de la semana -->
-    <div class="text-center mb-8">
-      <h2 class="text-3xl md:text-4xl font-semibold text-blue-300">Semana 2</h2>
-      <!-- Tu nombre justo debajo del título -->
-      <p class="text-center text-lg text-blue-100 mt-2">Andres Melvin Lazaro Estrada</p>
+  <!-- CUERPO PRINCIPAL -->
+  <main class="container mx-auto px-6 py-16">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+
+      <!-- Menú lateral fijo -->
+      <div class="col-span-1 space-y-4 sticky top-20 self-start">
+        <a href="../index.html" class="block bg-gray-900 hover:bg-gray-800 border border-blue-600 p-4 rounded-lg shadow-md text-center">
+          🏠 Home
+        </a>
+        <a href="../git-github.html" class="block bg-gray-900 hover:bg-gray-800 border border-blue-600 p-4 rounded-lg shadow-md text-center">
+          💻 Git y GitHub
+        </a>
+        <a href="../trabajos.html" class="block bg-gray-900 hover:bg-gray-800 border border-blue-600 p-4 rounded-lg shadow-md text-center">
+          📚 Trabajos
+        </a>
+      </div>
+
+      <!-- Contenido principal -->
+      <div class="col-span-3 bg-gray-900 border border-blue-600 rounded-lg p-8 shadow-md space-y-10">
+
+        <!-- Caja única de enunciado -->
+        <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
+          <h3 class="text-xl font-bold mb-2">📥 Descargar Enunciado de Ejercicios</h3>
+          <a href="../archivos/Semana02_Actividad_2025.pdf" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            Descargar PDF
+          </a>
+        </div>
+
+        <!-- Ejercicio 1 -->
+        <section>
+          <h2 class="text-2xl font-bold text-blue-300 mb-4">📘 Ejercicio 1</h2>
+          <p class="mb-4">
+            Este ejercicio corresponde a la primera práctica de la semana 2.
+          </p>
+
+          <!-- Caja GitHub -->
+          <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
+            <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
+            <a href="https://github.com/TU-USUARIO/REPO-SEM2-EJ1" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+              Ver en GitHub
+            </a>
+          </div>
+        </section>
+
+        <!-- Ejercicio 2 -->
+        <section>
+          <h2 class="text-2xl font-bold text-blue-300 mb-4">📘 Ejercicio 2</h2>
+          <p class="mb-4">
+            Este ejercicio corresponde a la segunda práctica de la semana 2.
+          </p>
+
+          <!-- Caja GitHub -->
+          <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
+            <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
+            <a href="https://github.com/TU-USUARIO/REPO-SEM2-EJ2" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+              Ver en GitHub
+            </a>
+          </div>
+        </section>
+
+        <!-- Caja final de descarga RAR -->
+        <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center mt-10">
+          <h3 class="text-xl font-bold mb-2">📦 Descargar Todos los Ejercicios (RAR)</h3>
+          <a href="../archivos/Tarea aplicaciones semana 2.rar" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            Descargar RAR
+          </a>
+        </div>
+
+      </div>
     </div>
-
-    <!-- REPOSITORIO ÚNICO -->
-    <section class="bg-gray-900 p-6 rounded-lg shadow-md max-w-3xl mx-auto">
-      <h3 class="text-2xl font-semibold mb-4">📝 Repositorio: Ejercicios desarrollados</h3>
-
-      <p class="text-gray-300 mb-6">
-        En este repositorio se encuentran los ejercicios realizados durante la segunda semana del curso.
-        El archivo comprimido contiene los programas, capturas y documentación necesaria.
-      </p>
-
-      <!-- Caja de descarga (.RAR/.ZIP) -->
-      <div class="mb-6">
-        <a href="../archivos/Tarea aplicaciones semana 2.rar" download
-           class="inline-block bg-green-600 hover:bg-green-800 text-white font-semibold px-5 py-3 rounded-lg shadow-md">
-          📦 Descargar Ejercicios Semana 2 (.RAR)
-        </a>
-      </div>
-
-      <!-- Caja para volver al inicio -->
-      <div class="mt-4 p-4 border border-blue-600 rounded-lg bg-black text-center">
-        <p class="text-gray-200 mb-3">¿Deseas volver al inicio?</p>
-        <a href="../index.html"
-           class="inline-block bg-blue-700 hover:bg-blue-900 text-white px-5 py-2 rounded-lg font-semibold">
-          ⬅ Volver al Inicio
-        </a>
-      </div>
-    </section>
   </main>
 
-  <!-- PIE DE PÁGINA (mismo estilo que la cabecera) -->
+  <!-- PIE DE PÁGINA -->
   <footer class="bg-gradient-to-r from-blue-800 to-black text-white py-10 mt-10 shadow-md">
     <div class="container mx-auto px-6 text-center">
       <h4 class="text-2xl font-semibold mb-2">Información</h4>
