--- a/semanas/Semana 1.html
+++ b/semanas/Semana 1.html
@@ -1,105 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Semana 1 - Desarrollo de Aplicaciones</title>
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Fuente formal -->
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    .fuente-formal {
-      font-family: 'Merriweather', serif;
-    }
+    .fuente-formal { font-family: 'Merriweather', serif; }
   </style>
 </head>
 <body class="bg-black text-gray-100 fuente-formal">
 
   <!-- ENCABEZADO -->
   <header class="bg-gradient-to-r from-blue-800 to-black text-white py-10 shadow-md">
-    <h1 class="text-5xl font-bold text-center drop-shadow-lg">
-      Desarrollo de Aplicaciones
-    </h1>
-    <p class="text-center text-blue-100 text-2xl mt-2 tracking-wide">
-      Andres Melvin Lazaro Estrada
-    </p>
+    <div class="container mx-auto px-6 text-center">
+      <h1 class="text-4xl md:text-5xl font-bold drop-shadow-lg">Semana 1 - Trabajos</h1>
+      <p class="mt-2 text-blue-100">Andres Melvin Lazaro Estrada</p>
+    </div>
   </header>
 
-  <!-- CONTENIDO -->
-  <main class="container mx-auto px-6 py-10">
-    <h2 class="text-3xl mb-10 text-center text-blue-300 font-bold">Semana 1</h2>
+  <!-- CUERPO PRINCIPAL -->
+  <main class="container mx-auto px-6 py-16">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
 
-    <!-- REPOSITORIO 1 -->
-    <div class="bg-gray-900 p-6 rounded-xl shadow mb-10">
-      <h3 class="text-2xl font-bold text-blue-400 mb-4">Repositorio 1: ¿Qué es GitHub y su importancia?</h3>
-      <p class="text-gray-300 mb-4">
-        GitHub es una plataforma de desarrollo colaborativo que permite a los programadores almacenar, controlar versiones y compartir proyectos de software. 
-        Su importancia radica en la posibilidad de trabajar en equipo, mantener un historial de cambios y contribuir a proyectos de código abierto.
-      </p>
-
-      <!-- Caja de descarga PDF -->
-      <div class="p-4 border border-blue-500 rounded-lg bg-black text-center">
-        <p class="mb-2 text-gray-200">Descargar el resumen en PDF:</p>
-        <a href="../archivos/GIT_HUB.pdf" download
-           class="inline-block bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg shadow-md">
-          📄 Descargar PDF
+      <!-- Menú lateral fijo -->
+      <div class="col-span-1 space-y-4 sticky top-20 self-start">
+        <a href="../index.html" class="block bg-gray-900 hover:bg-gray-800 border border-blue-600 p-4 rounded-lg shadow-md text-center">
+          🏠 Home
+        </a>
+        <a href="../git-github.html" class="block bg-gray-900 hover:bg-gray-800 border border-blue-600 p-4 rounded-lg shadow-md text-center">
+          💻 Git y GitHub
+        </a>
+        <a href="../trabajos.html" class="block bg-gray-900 hover:bg-gray-800 border border-blue-600 p-4 rounded-lg shadow-md text-center">
+          📚 Trabajos
         </a>
       </div>
-    </div>
 
-    <!-- REPOSITORIO 2 -->
-    <div class="bg-gray-900 p-6 rounded-xl shadow mb-10">
-      <h3 class="text-2xl font-bold text-blue-400 mb-4">Repositorio 2: Instrucciones para logearse en GitHub</h3>
-      <p class="text-gray-300 mb-4">
-        Para logearse en GitHub debes seguir los siguientes pasos:
-        <br>1️⃣ Ir a <a href="https://github.com" target="_blank" class="text-blue-400 underline">github.com</a>.
-        <br>2️⃣ Hacer clic en <b>Sign in</b>.
-        <br>3️⃣ Ingresar tu correo y contraseña registrados.
-        <br>4️⃣ Si activaste la verificación en dos pasos, ingresa el código de seguridad.
-      </p>
+      <!-- Contenido principal -->
+      <div class="col-span-3 bg-gray-900 border border-blue-600 rounded-lg p-8 shadow-md space-y-10">
 
-      <!-- Caja de descarga PDF -->
-      <div class="p-4 border border-green-500 rounded-lg bg-black text-center">
-        <p class="mb-2 text-gray-200">Descargar las instrucciones en PDF:</p>
-        <a href="../archivos/Instrucciones.pdf" download
-           class="inline-block bg-green-700 hover:bg-green-900 text-white px-6 py-3 rounded-lg shadow-md">
-          📘 Descargar PDF
-        </a>
+        <!-- Caja única de enunciado -->
+        <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
+          <h3 class="text-xl font-bold mb-2">📥 Descargar Enunciado de Ejercicios</h3>
+          <a href="../archivos/Semana01_Actividad_2025.pdf" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            Descargar PDF
+          </a>
+        </div>
+
+        <!-- Ejercicio 1 -->
+        <section>
+          <h2 class="text-2xl font-bold text-blue-300 mb-4">📘 Ejercicio 1</h2>
+          <p class="mb-4">
+            Este ejercicio corresponde a la primera práctica de la semana 1.
+          </p>
+
+          <!-- Caja GitHub -->
+          <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
+            <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
+            <a href="https://github.com/TU-USUARIO/REPO-EJERCICIO1" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+              Ver en GitHub
+            </a>
+          </div>
+        </section>
+
+        <!-- Ejercicio 2 -->
+        <section>
+          <h2 class="text-2xl font-bold text-blue-300 mb-4">📘 Ejercicio 2</h2>
+          <p class="mb-4">
+            Este ejercicio corresponde a la segunda práctica de la semana 1.
+          </p>
+
+          <!-- Caja GitHub -->
+          <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
+            <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
+            <a href="https://github.com/TU-USUARIO/REPO-EJERCICIO2" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+              Ver en GitHub
+            </a>
+          </div>
+        </section>
+
+        <!-- Caja final de descarga RAR -->
+        <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center mt-10">
+          <h3 class="text-xl font-bold mb-2">📦 Descargar Todos los Ejercicios (RAR)</h3>
+          <a href="../archivos/Tarea Aplicaciones.rar" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            Descargar RAR
+          </a>
+        </div>
+
       </div>
-    </div>
-
-    <!-- REPOSITORIO 3 -->
-    <div class="bg-gray-900 p-6 rounded-xl shadow mb-10">
-      <h3 class="text-2xl font-bold text-blue-400 mb-4">Repositorio 3: Ejercicios desarrollados</h3>
-      <p class="text-gray-300 mb-4">
-        En este repositorio se encuentran los ejercicios desarrollados durante la primera semana. 
-        Incluyen ejemplos prácticos de uso de Git, creación de repositorios y manejo de commits.
-      </p>
-
-      <!-- Caja de descarga ZIP/RAR -->
-      <div class="p-4 border border-yellow-500 rounded-lg bg-black text-center">
-        <p class="mb-2 text-gray-200">Descargar los ejercicios en formato comprimido:</p>
-        <a href="../archivos/Tarea Aplicaciones.rar" download
-           class="inline-block bg-yellow-600 hover:bg-yellow-800 text-white px-6 py-3 rounded-lg shadow-md">
-          📦 Descargar .RAR
-        </a>
-      </div>
-    </div>
-
-    <!-- Botón de regreso -->
-    <div class="text-center mt-10">
-      <a href="../index.html" class="bg-blue-700 hover:bg-blue-900 text-white px-6 py-3 rounded-lg shadow-md">
-        ⬅ Volver al Inicio
-      </a>
     </div>
   </main>
 
   <!-- PIE DE PÁGINA -->
-  <div class="bg-gradient-to-r from-blue-800 to-black text-white py-10 shadow-md mt-10">
-    <h2 class="text-center text-2xl font-semibold mb-2">Información</h2>
-    <p class="text-center text-lg">Elaborado por: Andres Melvin Lazaro Estrada</p>
-    <p class="text-center text-lg">Universidad Peruana Los Andes (UPLA)</p>
-  </div>
+  <footer class="bg-gradient-to-r from-blue-800 to-black text-white py-10 mt-10 shadow-md">
+    <div class="container mx-auto px-6 text-center">
+      <h4 class="text-2xl font-semibold mb-2">Información</h4>
+      <p class="text-lg">Elaborado por: Andres Melvin Lazaro Estrada</p>
+      <p class="text-lg">Universidad Peruana Los Andes (UPLA)</p>
+    </div>
+  </footer>
 
 </body>
 </html>
