--- a/semanas/Semana 2.html
+++ b/semanas/Semana 2.html
@@ -59,7 +59,7 @@
           <!-- Caja GitHub -->
           <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
             <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
-            <a href="https://github.com/TU-USUARIO/REPO-SEM2-EJ1" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2002/Enunciado%201" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
               Ver en GitHub
             </a>
           </div>
@@ -75,7 +75,7 @@
           <!-- Caja GitHub -->
           <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
             <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
-            <a href="https://github.com/TU-USUARIO/REPO-SEM2-EJ2" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2002/Enunciado%202" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
               Ver en GitHub
             </a>
           </div>
