--- a/semanas/Semana 3.html
+++ b/semanas/Semana 3.html
@@ -54,7 +54,7 @@
           <p class="mb-4 text-justify">
             Descripción breve del Ejercicio 1 desarrollado en esta semana. Aquí puedes explicar de qué trata o qué se resolvió.
           </p>
-          <a href="https://github.com/TU_USUARIO/repositorio-ejercicio1-semana3" target="_blank"
+          <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2003/Enunciado%201" target="_blank"
              class="block bg-blue-700 hover:bg-blue-600 text-white px-6 py-3 rounded-lg shadow-md text-center font-semibold">
             🔗 Ver Ejercicio 1 en GitHub
           </a>
@@ -66,7 +66,7 @@
           <p class="mb-4 text-justify">
             Descripción breve del Ejercicio 2 desarrollado en esta semana. Aquí puedes explicar de qué trata o qué se resolvió.
           </p>
-          <a href="https://github.com/TU_USUARIO/repositorio-ejercicio2-semana3" target="_blank"
+          <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2003/Enunciado%202" target="_blank"
              class="block bg-blue-700 hover:bg-blue-600 text-white px-6 py-3 rounded-lg shadow-md text-center font-semibold">
             🔗 Ver Ejercicio 2 en GitHub
           </a>
