--- a/semanas/Semana 4.html
+++ b/semanas/Semana 4.html
@@ -69,7 +69,7 @@
           <!-- Caja GitHub -->
           <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
             <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
-            <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2004/Actividad%2001%20semana%203" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2004/Tarea%20Enunciado%2001" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
               Ver en GitHub
             </a>
           </div>
@@ -85,7 +85,7 @@
           <!-- Caja GitHub -->
           <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
             <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
-            <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2004/Actividad%2002%20semana%203" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            <a href="https://github.com/dream987654/semana_1/tree/main/Tareas%20semanales/Actividad%20Semana%2004/Tarea%20Enunciado%2002" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
               Ver en GitHub
             </a>
           </div>
@@ -94,7 +94,7 @@
         <!-- Caja final de descarga RAR -->
         <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center mt-10">
           <h3 class="text-xl font-bold mb-2">📦 Descargar Todos los Ejercicios (RAR)</h3>
-          <a href="../archivos/Tarea aplicaciones semana 4.rar" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+          <a href="../archivos/Tarea aplicaciones 04.rar" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
             Descargar RAR
           </a>
         </div>
