--- a/semanas/Semana 6.html
+++ b/semanas/Semana 6.html
@@ -53,8 +53,8 @@
 
         <!-- Caja única de enunciado -->
         <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
-          <h3 class="text-xl font-bold mb-2">📥 Descargar PDF con los scripts de la base datos y la estructura del proyecto</h3>
-          <a href="../archivos/Scripts y estructura del proyecto PsicoCitas (3).pdf" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+          <h3 class="text-xl font-bold mb-2">📥 Descargar Enunciado de Ejercicio</h3>
+          <a href="../archivos/Enunciado semana 6.txt" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
             Descargar PDF
           </a>
         </div>
@@ -69,7 +69,7 @@
           <!-- Caja GitHub -->
           <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
             <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
-            <a href="https://github.com/dream987654/Aplicaciones-Taller/tree/main/Tareas%20semanales/Actividad%20Semana%2004/Enunciado%201" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            <a href="https://github.com/dream987654/Aplicaciones-Taller/tree/main/Tareas%20semanales/Actividad%20Semana%2005/Enunciado%201" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
               Ver en GitHub
             </a>
           </div>
@@ -77,8 +77,8 @@
 
         <!-- Caja final de descarga RAR -->
         <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center mt-10">
-          <h3 class="text-xl font-bold mb-2">📦 Descargar Todos los Ejercicios (RAR)</h3>
-          <a href="../archivos/Tarea aplicaciones semana 6.rar" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+          <h3 class="text-xl font-bold mb-2">📦Descarcgar Notas de Script de conexion</h3>
+          <a href="../archivos/Script de la conexion.txt" download class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
             Descargar RAR
           </a>
         </div>
