--- a/trabajos.html
+++ b/trabajos.html
@@ -66,9 +66,9 @@
           <a href="semanas/Semana 3.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 3</a>
           <a href="semanas/Semana 4.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 4</a>
           <a href="semanas/Semana 5.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 5</a>
-          <a href="semanas/semana6.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 6</a>
-          <a href="semanas/semana7.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 7</a>
-          <a href="semanas/semana8.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 8</a>
+          <a href="semanas/Semana 6.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 6</a>
+          <a href="semanas/Semana 7.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 7</a>
+          <a href="semanas/Semana 8.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 8</a>
           <a href="semanas/semana9.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 9</a>
           <a href="semanas/semana10.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 10</a>
           <a href="semanas/semana11.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 11</a>
@@ -94,7 +94,7 @@
   <!-- SCRIPT PROGRESO -->
   <script>
     // 🔥 Número de semanas completadas
-    let semanasCompletadas = 5; // cámbialo según tu avance
+    let semanasCompletadas = 8; // cámbialo según tu avance
     let totalSemanas = 16;
 
     let porcentaje = (semanasCompletadas / totalSemanas) * 100;
