--- a/trabajos.html
+++ b/trabajos.html
@@ -70,8 +70,8 @@
           <a href="semanas/Semana 7.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 7</a>
           <a href="semanas/Semana 8.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 8</a>
           <a href="semanas/Semana 9.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 9</a>
-          <a href="semanas/semana10.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 10</a>
-          <a href="semanas/semana11.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 11</a>
+          <a href="semanas/Semana 10.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 10</a>
+          <a href="semanas/Semana 11.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 11</a>
           <a href="semanas/semana12.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 12</a>
           <a href="semanas/semana13.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 13</a>
           <a href="semanas/semana14.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 14</a>
@@ -94,7 +94,7 @@
   <!-- SCRIPT PROGRESO -->
   <script>
     // 🔥 Número de semanas completadas
-    let semanasCompletadas = 9; // cámbialo según tu avance
+    let semanasCompletadas = 11; // cámbialo según tu avance
     let totalSemanas = 16;
 
     let porcentaje = (semanasCompletadas / totalSemanas) * 100;
