--- a/trabajos.html
+++ b/trabajos.html
@@ -73,10 +73,9 @@
           <a href="semanas/Semana 10.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 10</a>
           <a href="semanas/Semana 11.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 11</a>
           <a href="semanas/Semana 12.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 12</a>
-          <a href="semanas/semana13.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 13</a>
-          <a href="semanas/semana14.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 14</a>
-          <a href="semanas/semana15.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 15</a>
-          <a href="semanas/semana16.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 16</a>
+          <a href="semanas/Semana 13.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 13</a>
+          <a href="semanas/Semana 14.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 14</a>
+          <a href="semanas/Semana 15.html" class="block bg-blue-900 hover:bg-blue-700 p-6 rounded-lg shadow-md text-center font-semibold text-white">Semana 15</a>
         </div>
       </div>
     </div>
@@ -94,8 +93,8 @@
   <!-- SCRIPT PROGRESO -->
   <script>
     // 🔥 Número de semanas completadas
-    let semanasCompletadas = 12; // cámbialo según tu avance
-    let totalSemanas = 16;
+    let semanasCompletadas = 15; // cámbialo según tu avance
+    let totalSemanas = 15;
 
     let porcentaje = (semanasCompletadas / totalSemanas) * 100;
 
