--- a/semanas/Semana 12.html
+++ b/semanas/Semana 12.html
@@ -69,7 +69,7 @@
           <!-- Caja GitHub -->
           <div class="bg-gradient-to-r from-blue-700 to-blue-900 p-6 rounded-lg shadow-lg text-center">
             <h3 class="text-xl font-bold mb-2">🌍 Repositorio en GitHub</h3>
-            <a href="https://github.com/dream987654/Aplicaciones-Taller/tree/main/Tareas%20semanales/Actividad%20Semana%2011/mavenproject6/src/main/java/Controladores" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
+            <a href="https://github.com/dream987654/Aplicaciones-Taller/tree/main/Tareas%20semanales/Actividad%20Semana%2012/Controladores" target="_blank" class="bg-white text-blue-900 px-6 py-2 rounded-lg font-semibold hover:bg-gray-200">
               Ver en GitHub
             </a>
           </div>
